--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>doc</title>
 </head>
 <body>
-Hello World Lily
+    <h2>Coding for Spatial Practice</h2>
+    <ul>
+        <li><a href="exercise-02/week02.html">Exercise 01, Houses or Museums?</a></li>
+    </ul>
 </body>
 </html>
