--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <title>doc</title>
-=======
-    <title>Document</title>
-
->>>>>>> 8a498fc17ea59ebe361133865815923bcd00a1a4
 </head>
 <body>
     <h2>Coding for Spatial Practice</h2>
+    <p>Hello World from Lily</p>
+    
     <ul>
         <li><a href="exercise-02/week02.html">Exercise 01, Houses or Museums?</a></li>
     </ul>
