--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
     <h2>Coding for Spatial Practice</h2>
     <p>Hello World from Lily</p>
-    
+
     <ul>
         <li><a href="exercise-02/week02.html">Exercise 01, Houses or Museums?</a></li>
+        <li><a href="exercise-01/index.html">hello world</a></li>
     </ul>
 </body>
 </html>
