--- a/project-02/try1.html
+++ b/project-02/try1.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+      </div>
+   
+      
+    <p>|||||//////////                                                  <h1>|||||\\\\\\\\\\\</h1><h2>|||IIIIIIIIIII<s>lllllllllll</s>llllll111<s>111111</s>111111111<s>iii</s>iiii|||||||</h2></p>
     
+    <s> |||||||||||||||||||||||||||</s>   <s> |||||||||||||||||||||||||||</s>
+    <h1>           <s>||||</s>  <s>||||</s>  <s>||||</s>  <s>||||</s> </h1>
+    <i>|||||||||</i><i>|||||||||</i><i>|||||||||</i>
+    <h3><s>/////////////////////////////////////////////////\\\\\\\\\</s></h3>
+    <h4><s>|||||||  |||||||||||||||||||  |||||||||||||||||  |||||||||||||||</s> IIIIIIIIIIIIIIIIIIIIIIIIIILLLLLLLLLLL<s>LLLLLLLLLLL</s>TTT</h4>
+    <h5>
+        |||
+    </h5>
 </body>
 </html>
