--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <ul>
         <li><a href="exercise-01/index.html">hello world</a></li>
     </ul>
-   
+    <ul>
+        <li><a href="project-02/try1.html">Project02-try1</a></li>
+        <li><a href="exercise-01/index.html">hello world</a></li>
+        <li><a href="exercise-01/index.html">hello world</a></li>
+        <li><a href="exercise-01/index.html">hello world</a></li>
+        <li><a href="exercise-01/index.html">hello world</a></li>
+    </ul>
 </body>
 </html>
