--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ul>
     <ul>
         <li><a href="project-02/try1.html">Project02-try1</a></li>
-        <li><a href="exercise-01/index.html">hello world</a></li>
+        <li><a href="project-02/try2.html">Project02-try2</a></li>
         <li><a href="exercise-01/index.html">hello world</a></li>
         <li><a href="exercise-01/index.html">hello world</a></li>
         <li><a href="exercise-01/index.html">hello world</a></li>
