--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ul>
         <li><a href="project-02/try1.html">Project02-try1</a></li>
         <li><a href="project-02/try2.html">Project02-try2</a></li>
-        <li><a href="exercise-01/index.html">hello world</a></li>
+        <li><a href="project-02/try3.html">Project02-try3</a></li>
         <li><a href="exercise-01/index.html">hello world</a></li>
         <li><a href="exercise-01/index.html">hello world</a></li>
     </ul>
