--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <li><a href="exercise-01/index.html">hello world</a></li>
     </ul>
     <ul>
+        <p><h4>My Project02</h4></p>
         <li><a href="project-02/try1.html">Project02-try1</a></li>
         <li><a href="project-02/try2.html">Project02-try2</a></li>
         <li><a href="project-02/try3.html">Project02-try3</a></li>
-        <li><a href="exercise-01/index.html">hello world</a></li>
-        <li><a href="exercise-01/index.html">hello world</a></li>
+        <li><a href="project-02/try4.html">Project02-try4</a></li>
+        <li><a href="project-02/try5.html">Project02-try5</a></li>
     </ul>
 </body>
 </html>
