--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
         <li><a href="project-02/try4.html">Project02-try4</a></li>
         <li><a href="project-02/try5.html">Project02-try5</a></li>
     </ul>
+    <ul>
+        <li><a href="exercise-03/exercise-03.html">My exercise 03</a></li>
+    </ul>
 </body>
 </html>
