--- a/exercise-03/exercise-03.html
+++ b/exercise-03/exercise-03.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class='title'>HOUSES OR MUSEUMS?</h1>
-<i>Lina Bo Bardi, 1958</i>
+<i class='lefts'>Lina Bo Bardi, 1958</i>
 <br>
 <br>
 <p class='content'>What should come first, <strong>houses or museums</strong>?<br><br> Everything at once: the houses, the schools, the museums, the libraries. Urban Planning cannot ignore cultural issues. If in the construction of new neighbourhoods, new housing forms the basis of the city plan (and by housing we also mean the market, the schools and the public services like the hospital and the post offices), the planning of a city cannot overlook two key public buildings that still today are considered an intellectual luxury: the Museum and the Library.
