--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
     <ul>
         <li><a href="exercise-03/exercise-03.html">My exercise 03</a></li>
     </ul>
+    <ul>
+        <li><a href="week-06/index.html">My exercise for Week6, 2021/2/23</a></li>
+    </ul>
 </body>
 </html>
