--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
     <ul>
         <li><a href="week-06/index.html">My exercise for Week6, 2021/2/23</a></li>
     </ul>
+    <ul>
+        <li><a href="project-03/blog.html">Project-03</a></li>
+    </ul>
 </body>
 </html>
