--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <li><a href="week-06/index.html">My exercise for Week6, 2021/2/23</a></li>
     </ul>
     <ul>
-        <li><a href="project-03/blog.html">Project-03</a></li>
+        <li><a href="project-03/blog.html">Project-03 STEP1</a></li>
+        <li><a href="project-03/blog2.html">Project-03 STEP2</a></li>
     </ul>
 </body>
 </html>
