--- a/index.html
+++ b/index.html
@@ -36,5 +36,12 @@
         <li><a href="project-03/blog.html">Project-03 STEP1</a></li>
         <li><a href="project-03/blog2.html">Project-03 STEP2</a></li>
     </ul>
+    <ul>
+        <li><a href="project-03/blog.html">Project-03 STEP1</a></li>
+        <li><a href="project-03/blog2.html">Project-03 STEP2</a></li>
+    </ul>
+    <ul>
+        <li><a href="finalproject/index.html">FINAL PROJECT</a></li>
+    </ul>
 </body>
 </html>
