--- a/index.html
+++ b/index.html
@@ -12,36 +12,32 @@
     <p>Hello World from Lily</p>
 
     <ul>
-        <li><a href="exercise-02/week02.html">Exercise 01, Houses or Museums?</a></li>
+        <li><a href="exercises/exercise-02/week02.html">Exercise 01, Houses or Museums?</a></li>
         
     </ul>
     <ul>
-        <li><a href="exercise-01/index.html">hello world</a></li>
+        <li><a href="exercises/exercise-01/index.html">hello world</a></li>
     </ul>
     <ul>
         <p><h4>My Project02</h4></p>
-        <li><a href="project-02/try1.html">Project02-try1</a></li>
-        <li><a href="project-02/try2.html">Project02-try2</a></li>
-        <li><a href="project-02/try3.html">Project02-try3</a></li>
-        <li><a href="project-02/try4.html">Project02-try4</a></li>
-        <li><a href="project-02/try5.html">Project02-try5</a></li>
+        <li><a href="projects/project-02/try1.html">Project02-try1</a></li>
+        <li><a href="projects/project-02/try2.html">Project02-try2</a></li>
+        <li><a href="projects/project-02/try3.html">Project02-try3</a></li>
+        <li><a href="projects/project-02/try4.html">Project02-try4</a></li>
+        <li><a href="projects/project-02/try5.html">Project02-try5</a></li>
     </ul>
     <ul>
-        <li><a href="exercise-03/exercise-03.html">My exercise 03</a></li>
+        <li><a href="exercises/exercise-03/exercise-03.html">My exercise 03</a></li>
     </ul>
     <ul>
-        <li><a href="week-06/index.html">My exercise for Week6, 2021/2/23</a></li>
+        <li><a href="exercises/week-06/index.html">My exercise for Week6, 2021/2/23</a></li>
     </ul>
     <ul>
-        <li><a href="project-03/blog.html">Project-03 STEP1</a></li>
-        <li><a href="project-03/blog2.html">Project-03 STEP2</a></li>
+        <li><a href="projects/project-03/blog.html">Project-03 STEP1</a></li>
+        <li><a href="projects/project-03/blog2.html">Project-03 STEP2</a></li>
     </ul>
-    <ul>
-        <li><a href="project-03/blog.html">Project-03 STEP1</a></li>
-        <li><a href="project-03/blog2.html">Project-03 STEP2</a></li>
-    </ul>
-    <ul>
-        <li><a href="finalproject/index.html">FINAL PROJECT</a></li>
+    
+        <li><a href="projects/finalproject/index.html">FINAL PROJECT</a></li>
     </ul>
 </body>
 </html>
